# screendemo

./: .gitignore  design.md  pyproject.toml  tasks.md
py/: __init__.py  audio.py  dbus_permissions.py  edimage.py  postmux.py  screen_recording.py  settings.py  snapshot.py  ui_simple.py  xdgav.py
